[gd_scene load_steps=6 format=3 uid="uid://dgegex34p1k36"]

[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme_base/theme.tres" id="1"]
[ext_resource type="Script" path="res://src/screens/setup/setup_team/setup_team.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bi1p42wfploqa" path="res://src/ui_components/tree_overviews/teams_tree/teams_tree.tscn" id="3_omqyr"]
[ext_resource type="PackedScene" uid="uid://cdrmqgiuv6wf3" path="res://src/ui_components/team_profile/team_profile.tscn" id="3_sndt3"]
[ext_resource type="PackedScene" uid="uid://chc845g8trbih" path="res://src/ui_components/buttons/default_button/default_button.tscn" id="4_dn04n"]

[node name="TeamSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Main" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TeamsTree" parent="MarginContainer/VBoxContainer/Main" instance=ExtResource("3_omqyr")]
unique_name_in_owner = true
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Main"]
layout_mode = 2

[node name="TeamProfile" parent="MarginContainer/VBoxContainer/Main" instance=ExtResource("3_sndt3")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Back" parent="MarginContainer/VBoxContainer/Buttons" instance=ExtResource("4_dn04n")]
layout_mode = 2
text = "BACK"

[node name="SelectTeam" parent="MarginContainer/VBoxContainer/Buttons" instance=ExtResource("4_dn04n")]
layout_mode = 2
text = "SELECT"

[connection signal="team_selected" from="MarginContainer/VBoxContainer/Main/TeamsTree" to="." method="_on_teams_tree_team_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/SelectTeam" to="." method="_on_select_team_pressed"]
